objects/Territory_Rule_Criteria__c.object
<CustomObject>
    <description>To set the rule criteria for the territory assignment.</description>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <label>Migration ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <label>Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                    <default>true</default>
                    <label>Never</label>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>Store the value of the score give to the criteria.</description>
        <label>Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SourceId__c</fullName>
        <description>Store the salesforce 18 char unique Id for cloning.</description>
        <label>SourceId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Assignment_Rule__c</fullName>
        <description>Store the Id of the associated territory assignment rule object record.</description>
        <label>Territory Assignment Rule</label>
        <referenceTo>Territory_Assignment_Rule__c</referenceTo>
        <relationshipName>Territory_Rule_Criterias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <description>Store the territory shadow Object look up</description>
        <formula>HYPERLINK(&apos;/&apos;+Territory_Assignment_Rule__r.Territory__c, Territory_Assignment_Rule__r.Territory__r.Name,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Values__c</fullName>
        <description>Shows total number of criteria values for a territory criteria.</description>
        <label>Values</label>
        <summaryForeignKey>Territory_Rule_Criteria_Value__c.Territory_Rule_Criteria__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Rule Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Score__c</columns>
        <columns>Territory__c</columns>
        <columns>Territory_Assignment_Rule__c</columns>
        <columns>Values__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TRC-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Criteria</pluralLabel>
    <recordTypes>
        <fullName>Account_City</fullName>
        <active>true</active>
        <description>Account City related field.</description>
        <label>Account City</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Country_Code</fullName>
        <active>true</active>
        <description>Account Country related field.</description>
        <label>Account Country Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Name</fullName>
        <active>true</active>
        <description>Account Name related field.</description>
        <label>Account Name</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Postal_Code</fullName>
        <active>true</active>
        <description>Account Postal Code related field.</description>
        <label>Account Postal Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Sector</fullName>
        <active>true</active>
        <description>Account Sector related field</description>
        <label>Account Sector</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_State_Code</fullName>
        <active>true</active>
        <description>Account State Code  related field.</description>
        <label>Account State Code</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Not_Allowed_Change_Record_Type</fullName>
        <active>true</active>
        <description>User cannot change Territory rule criteria record type when it has rule criteria values associated with it</description>
        <errorConditionFormula>AND(PRIORVALUE( RecordTypeId )&lt;&gt; RecordTypeId,  Values__c &gt;0)</errorConditionFormula>
        <errorMessage>You cannot change Rule Criteria Record Type when it has criteria values associated with it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Score_Value_Should_be_in_Range_Of_1to200</fullName>
        <active>true</active>
        <description>Prevent Score value to get exceed by 200.</description>
        <errorConditionFormula>NOT(AND(Score__c &gt;= 1, Score__c &lt;= 200))</errorConditionFormula>
        <errorDisplayField>Score__c</errorDisplayField>
        <errorMessage>Score value should be in between 1-200.</errorMessage>
    </validationRules>
</CustomObject>